--- a/emergencias.html
+++ b/emergencias.html
@@ -178,14 +178,14 @@ i {
 	<br>
 	<br>
 <h1>  <strong>  EMERGENCIAS  </strong>  </h1>
-	<p class="imagen"> <img src="Hospital" width="1400" height="647"> </p>
+	<p class="imagen"> <img src="Emergenciainformacion.png" width="1400" height="647"> </p>
 </div>
 <br> 
 <br> 
 <br>
 <br> 
-h3> <center> Siguenos en nuestras Redes Sociales!</center> </h3>
+ <center> Siguenos en nuestras Redes Sociales!</center> </h3>
 <div align="center">
- <a href="https://www.facebook.com/HospitalBendana/"> <img src="2023_Facebook_icon.svg (1).png" width="80" height="80">
+ <a href="https://www.facebook.com/HospitalBendana/"> <img src=" 2023_Facebook_icon.svg (1).png" width="80" height="80">
     <a href="https://api.whatsapp.com/send?phone=50432601391&text=%C2%A1Hola!%20Gracias%20por%20tu%20preferencia,%20en%20un%20momento%20nos%20ponemos%20en%20contacto%20contigo.%F0%9F%92%9A%20Tambi%C3%A9n%20puedes%20llamarnos%20a%20nuestros%20tel%C3%A9fonos%20de%20servicio%20al%20cliente:%20%20%20%F0%9F%93%B2%202516-2900,%202516-2980,%202516-298%20Ser%C3%A1%20un%20gusto%20atenderte."> <img src="WhatsApp.svg.png" width="95" height="95">
     <a href="https://www.instagram.com/hospitalbendana/"> <img src="Instagram_logo_2022.svg.png" width="80" height="80">
